2.1.1/_sources/gallery/shapes_and_collections/ellipse_rotated.rst.txt


.. _sphx_glr_gallery_shapes_and_collections_ellipse_rotated.py:


===============
Ellipse Rotated
===============





.. image:: /gallery/shapes_and_collections/images/sphx_glr_ellipse_rotated_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np
    from matplotlib.patches import Ellipse

    delta = 45.0  # degrees

    angles = np.arange(0, 360 + delta, delta)
    ells = [Ellipse((1, 1), 4, 2, a) for a in angles]

    a = plt.subplot(111, aspect='equal')

    for e in ells:
        e.set_clip_box(a.bbox)
        e.set_alpha(0.1)
        a.add_artist(e)

    plt.xlim(-2, 4)
    plt.ylim(-1, 3)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: ellipse_rotated.py <ellipse_rotated.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: ellipse_rotated.ipynb <ellipse_rotated.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
