2.2.2/_sources/gallery/shapes_and_collections/ellipse_rotated.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_shapes_and_collections_ellipse_rotated.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_shapes_and_collections_ellipse_rotated.py:


===============
Ellipse Rotated
===============





.. image:: /gallery/shapes_and_collections/images/sphx_glr_ellipse_rotated_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np
    from matplotlib.patches import Ellipse

    delta = 45.0  # degrees

    angles = np.arange(0, 360 + delta, delta)
    ells = [Ellipse((1, 1), 4, 2, a) for a in angles]

    a = plt.subplot(111, aspect='equal')

    for e in ells:
        e.set_clip_box(a.bbox)
        e.set_alpha(0.1)
        a.add_artist(e)

    plt.xlim(-2, 4)
    plt.ylim(-1, 3)

    plt.show()


.. _sphx_glr_download_gallery_shapes_and_collections_ellipse_rotated.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: ellipse_rotated.py <ellipse_rotated.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: ellipse_rotated.ipynb <ellipse_rotated.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
